# airwindohhs

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  airwindows-version.txt  pyproject.toml  todo.txt  version.txt
.github/workflows/: compile-check.yml  import-new-plugins.yml
docs/: what.txt
example/: CMakeLists.txt  example.cpp
include/: effect.hpp  meta.hpp
include/ambience/: adt.hpp  brightambience.hpp  brightambience2.hpp  brightambience3.hpp  chorus.hpp  chorusensemble.hpp  clearcoat.hpp  doublelay.hpp  ensemble.hpp  hombre.hpp  kchamberar.hpp  melt.hpp  mv.hpp  mv2.hpp  pitchdelay.hpp  purestecho.hpp  sampledelay.hpp  starchild.hpp  starchild2.hpp  stereochorus.hpp  stereodoubler.hpp  stereoensemble.hpp  tapedelay.hpp  tapedelay2.hpp  triplespread.hpp
include/amp-sims/: bassamp.hpp  bassdrive.hpp  bigamp.hpp  cabs.hpp  cabs2.hpp  chimeydeluxe.hpp  chimeyguitar.hpp  chimeyguitar2.hpp  crickbass.hpp  fireamp.hpp  grindamp.hpp  leadamp.hpp  lilamp.hpp  midamp.hpp  pointydeluxe.hpp  pointyguitar.hpp  wolfbot.hpp
include/bass/: basskit.hpp  dubcenter.hpp  dubsub.hpp  dubsub2.hpp  elliptical.hpp  fathomfive.hpp  floor.hpp  hermepass.hpp  infrasonic.hpp  orbitkick.hpp
include/biquads/: biquad.hpp  biquad2.hpp  biquaddouble.hpp  biquadhilo.hpp  biquadnonlin.hpp  biquadonehalf.hpp  biquadplus.hpp  biquadstack.hpp  biquadtriple.hpp
include/brightness/: acceleration.hpp  air.hpp  (+24 more)
scripts/: airwindopedia.txt  check_compile.py  clang-format.sh  create_headers.py  gen_meta.py  grab.py  template.hpp
test/: meta_smoke.cpp
tools/: dump_meta.cpp
(+423 files in other folders)
