[project]
name = "airwindohhs"
version = "0.1.0"
description = "Header generator for the airwindohhs C++ plugin collection"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
grab = "scripts.grab.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
